--- a/templates/builder.html
+++ b/templates/builder.html
@@ -11,22 +11,22 @@
             <div class="row">
                 <div class="input-field col s12 center">
                     <button class="btn waves-effect waves-light cyan" type="submit" id="preview-builder" name="preview"
-                        formaction="/addrecipe">Preview Recipe</button>
+                        formaction="/preview">Preview Recipe</button>
                 </div>
             </div>
             <!-------title------->
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="title" name="title" type="text" class="validate" minlength="1" maxlength="30"
-                        pattern="^[a-zA-z ]{1,30}$" required>
+                    <input id="title" name="title" type="text" class="validate" minlength="1" maxlength="60"
+                        pattern="^.{1,60}$" required>
                     <label for="username">Recipe Title</label>
                 </div>
             </div>
             <!-------description------->
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="desc" name="desc" type="text" class="validate" minlength="1" maxlength="100"
-                        pattern="^[a-zA-z0-9&,. ]{1,100}$" required>
+                    <input id="desc" name="desc" type="text" class="validate" minlength="1" maxlength="200"
+                        pattern="^.{1,200}$" required>
                     <label for="username">Describe your recipe</label>
                 </div>
             </div>
@@ -37,12 +37,17 @@
                         <div class="col s12">
                             <div class="btn pink darken-4">
                                 <span>Select Image</span>
-                                <input type="file">
+                                <input type="file" accept="image/*" onchange="loadPreviewFile(event)" name="recipe_img">
+                            </div>
+                        </div>
+                        <div class="col s12">
+                            <div class="img-wrapper">
+                                <img id="builder-preview-img"/>
                             </div>
                         </div>
                         <div class="col s12">
                             <div class="file-path-wrapper">
-                                <input class="file-path validate" type="text" name="recipe_img">
+                                <input class="file-path validate" type="text">
                             </div>
                         </div>
                     </div>
@@ -119,5 +124,11 @@
         </div>
     </form>
 </div>
+
+<script>
+    var loadPreviewFile = function(event) { 
+        $('#builder-preview-img').attr("src", URL.createObjectURL(event.target.files[0]));
+    };
+</script>
 
 {% endblock %}
