--- a/templates/login.html
+++ b/templates/login.html
@@ -11,16 +11,14 @@
                 <!-------username------->
                 <div class="row">
                     <div class="input-field col s12">
-                        <input id="username" name="username" type="text" class="validate" minlength="1" maxlength="14"
-                            pattern="^[a-zA-z0-9]{1,14}$" required>
+                        <input id="username" name="username" type="text" class="validate" minlength="1" maxlength="20" pattern="^[a-zA-z0-9-_]{1,20}$" required>
                         <label for="username">Username</label>
                     </div>
                 </div>
                 <!-------password------->
                 <div class="row">
                     <div class="input-field col s12">
-                        <input id="password" name="password" type="password" class="validate" minlength="1"
-                            maxlength="14" pattern="^[a-zA-z0-9]{1,14}$" required>
+                        <input id="password" name="password" type="password" class="validate" minlength="8" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required>
                         <label for="password">Password</label>
                     </div>
                 </div>
