--- a/templates/preview.html
+++ b/templates/preview.html
@@ -1,12 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="row" id="recipe-preview">
-    <div class="col s12 m7 l5">
+<div class="row">
+    <div class="col s12 m7 l5" id="recipe-preview">
         {% include "recipecard.html" %}      
-        <!--<div class="col s12 m7 l5">
-            <a href="/addrecipe" onclick="history.go(-1)" class="btn waves-effect waves-light" id="preview-back">Back</a>
-        </div>-->
     </div>
 </div>
 
