--- a/templates/recipecard.html
+++ b/templates/recipecard.html
@@ -1,44 +1,68 @@
 {% block recipecard %}
 <div class="card food-bg" id="recipe-card">
-    <div class="card-content lime lighten-5">
-        <h5>{{ recipecard.title|title }}</h5>
-        <p class="recipe-created-by"><i>by {{ recipecard.created_by }}</i></p>
-    </div>
-    <div class="recipe-img-wrapper">
-        {% if recipecard.recipe_img %}
-        <img class="recipe-img" src="static/images/public/{{ recipecard.recipe_img }}">
-        {% endif %}
-    </div>
-    <div class="card-tabs">
-        <ul class="tabs tabs-fixed-width">
-            <li class="tab"><a class="tab-link grey darken-3 light-green-text active" id="desc-tab">Description</a></li>
-            <li class="tab"><a class="tab-link light-green-text text-lighten-1" id="ingredients-tab">Ingredients</a></li>
-            <li class="tab"><a class="tab-link light-green-text text-lighten-2" id="method-tab">Method</a></li>
-        </ul>
-    </div>
-    <div class="card-tab-content lime lighten-5">
-        <div id="desc" style="display: block;">
-            <h6>{{ recipecard.desc }}</h6>
-            <p><i>Portions: {{ recipecard.portions }}</i></p>
-            <p><i>Suitable for: {{ recipecard.suitableForMinMnths }} - {{ recipecard.suitableForMaxMnths }} months</i></p>
+    <div class="row card-content lime lighten-5">
+        <div class="col s12">
+            <h5>{{ recipecard.title|title }}</h5>
         </div>
-        <div id="ingredients" style="display: none;">
-            {% if recipecard.ingredients.items() is not none %}
-                {% for k, ingredient in recipecard.ingredients.items() %}
-                    <p>- {{ ingredient.name|capitalize }} - {{ ingredient.qty.measure }}{{ ingredient.qty.unit }}</p>
-                {% endfor %}
-            {% else %}
-                NONE
+        <div class="col s12">
+            <p class="recipe-created-by"><i>by {{ recipecard.created_by }}</i></p>
+        </div>
+    </div>
+    <div class="row" id="prep-time">
+        <div class="col s6">
+            <p id="recipe-prep-time"><i class="material-icons">access_time</i> Preparation Time: {{ recipecard.prep_time|int }} mins</p>
+        </div>
+        <div class="col s6">
+            <p id="recipe-cook-time"><i class="material-icons">restaurant</i> Cooking Time: {{ recipecard.cook_time|int }} mins</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="recipe-img-wrapper">
+            {% if recipecard.recipe_img %}
+            <img class="recipe-img" src="static/images/public/{{ recipecard.recipe_img }}">
             {% endif %}
         </div>
-        <div id="method" style="display: none;">
-            {% if recipecard.steps.items() is not none %}
-                {% for k, step in recipecard.steps.items() %}
-                    <p>{{loop.index}}. {{ step.action|capitalize }} <i>({{ step.time|int }} mins)</i></p>
-                {% endfor %}
-            {% else %}
-                NONE
-            {% endif %}
+        <div class="card-tabs">
+            <ul class="tabs tabs-fixed-width">
+                <li class="tab"><a class="tab-link grey darken-3 light-green-text active" id="desc-tab">Description</a></li>
+                <li class="tab"><a class="tab-link light-green-text text-lighten-1" id="ingredients-tab">Ingredients</a></li>
+                <li class="tab"><a class="tab-link light-green-text text-lighten-2" id="method-tab">Method</a></li>
+            </ul>
+        </div>
+        <div class="card-tab-content lime lighten-5">
+            <div id="desc" style="display: block;">
+                <h6>{{ recipecard.desc }}</h6>
+                <p><i>Portions: {{ recipecard.portions }}</i></p>
+                <p><i>Suitable for: {{ recipecard.suitableForMinMnths }} - {{ recipecard.suitableForMaxMnths }} months</i></p>
+            </div>
+            <div id="ingredients" style="display: none;">
+                {% if recipecard.ingredients.items() is not none %}
+                    {% for k, ingredient in recipecard.ingredients.items() %}
+                        <p>- {{ ingredient.name|capitalize }} - {{ ingredient.qty.measure }}{{ ingredient.qty.unit }}</p>
+                    {% endfor %}
+                {% else %}
+                    NONE
+                {% endif %}
+            </div>
+            <div id="method" style="display: none;">
+                {% if recipecard.steps.items() is not none %}
+                    <h6><i class="material-icons">access_time</i> Preparation:</h6>
+                    {% for k, step in recipecard.steps.items() %}
+                        {% if step.type == "prepare" %}    
+                            <p>- {{ step.action|capitalize }} <i>({{ step.time|int }} mins)</i></p>
+                        {% endif %}
+                    {% endfor %}
+                    <br>
+                    <h6><i class="material-icons">restaurant</i> Method:</h6>
+                    {% for k, step in recipecard.steps.items() %}
+                        {% if step.type == "cook" %}    
+                            <p>- {{ step.action|capitalize }} <i>({{ step.time|int }} mins)</i></p>
+                        {% endif %}
+                    {% endfor %}
+                {% else %}
+                    NONE
+                {% endif %}
+            </div>
         </div>
     </div>
 </div>
