--- a/static/css/style.css
+++ b/static/css/style.css
@@ -108,6 +108,7 @@ main {
 
 .card {
     padding: 25px;
+    margin:0;
 }
 
 .card .card-content {
@@ -117,7 +118,7 @@ main {
 .card-tab-content {
     font-size: 12px;
     line-height: 1.5;
-    padding: 5px;
+    padding: 10px;
 }
 
 .file-field .file-path-wrapper {
@@ -186,10 +187,6 @@ main {
 
 /* MEDIA QUERIES */
 @media only screen and (max-width: 993px) {
-    #recipe-card{
-        min-height: 40vh;
-        max-height: 60vh;
-    }
 }
 
 @media only screen and (max-width: 601px) {
@@ -205,25 +202,16 @@ main {
     #home-info-col {
         text-align: left;
     }
-
-    .card {
-        padding: 10px;
-    }
      
     .card .card-content {
-        padding: 2.5px;
+        margin-left: 0;
+        margin-right: 0;
     }
 
     .card-tab-content {
         font-size: 10px;
         line-height: 1.2;
-        padding: 2.5px;
     }
-
-    #recipe-card{
-        min-height: 50vh;
-        max-height: 70vh;
-    }   
 
     .range-value-col {
         margin-top:0px;
