--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base-overlay.html" %}
 {% block content %}
     {% for recipe in recipes %}
         <h2>{{recipe.title}}</h2><br>
