--- a/templates/builder.html
+++ b/templates/builder.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base-overlay.html" %}
 {% block content %}
 <div class="container">
     <form method="POST" enctype="multipart/form-data" id="builder-form">
