--- a/templates/preview.html
+++ b/templates/preview.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block content %}
+{% block fullcontent %}
 
 <div class="row">
     <div class="col s12 m7 l5" id="recipe-preview">
