--- a/templates/builder.html
+++ b/templates/builder.html
@@ -41,7 +41,7 @@
                             </div>
                         </div>
                         <div class="col s12">
-                            <div class="img-wrapper">
+                            <div class="builder-img-wrapper">
                                 <img id="builder-preview-img"/>
                             </div>
                         </div>
