--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,9 +2,47 @@
 {% block content %}
 <div class="profile-wrapper">
     <div class="row">
-        <div class="col s12 m8 offset-m2" id="profile">
+        <div class="col s12 m4" id="profile">
             <div class="card-panel">
-                <h3>{{ username }}</h3>
+                <h5>Profile</h5>
+                <a href="#" id="user-edit" class="black-text"><i class="material-icons">edit</i></a>
+                <form method="POST">
+                    <label for="username">username</label>
+                    <input disabled type="text" name="username" value="{{ user.username }}" class="validate" required/>
+
+                    <label for="password" style="display: none;">password</label>
+                    <input disabled type="password" name="password" id="password" style="display: none;" class="validate" required/>
+                    <label for="password_confirm" style="display: none;">password_confirm</label>
+                    <input disabled type="password" name="password_confirm" id="password_confirm" style="display: none;" class="validate" required/>
+
+                    <label for="email">email</label>
+                    <input disabled type="email" name="email" value="{{ user.email }}" class="validate" required/>
+
+                    <label for="first_name">first name</label>
+                    <input disabled type="text" name="first_name" value="{{ user.first_name }}" class="validate" required/>
+
+                    <label for="last_name">last name</label>
+                    <input disabled type="text" name="last_name" value="{{ user.last_name }}" class="validate" required/>
+
+                    <label for="dob">date of birth</label>
+                    <input disabled type="date" id="dob" name="dob"  class="datepicker" value="{{ user.dob }}" required>
+
+                    <label for="country">country</label>
+                    <input disabled type="text" name="country" value="{{ user.country }}" class="validate" required/>
+
+                    <input type="submit" class="btn" id="user-edit-submit" style="display: none;">
+                </form>
+            </div>
+        </div>
+        <div class="col s12 m4" id="my-recipes">
+             <div class="card-panel">
+                <h5>My Recipes</h5>
+                {% include "my-recipes.html" %}
+            </div>
+        </div>
+        <div class="col s12 m4" id="my-favourites">
+            <div class="card-panel">
+                <h5>My Favourites</h5>
             </div>
         </div>
     </div>
