--- a/templates/my_recipes.html
+++ b/templates/my_recipes.html
@@ -2,7 +2,7 @@
 
     {% for recipecard in myrecipes %}
 
-        {% include "recipecard.html" %}
+        {% include "recipe_card.html" %}
 
     {% endfor %}
 
