--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,4 +1,4 @@
-{% extends "base-overlay.html" %}
+{% extends "base_overlay.html" %}
 {% block content %}
 <div class="profile-wrapper">
     <div class="row">
@@ -37,7 +37,7 @@
         <div class="col s12 m4" id="my-recipes">
              <div class="card-panel">
                 <h5>My Recipes</h5>
-                {% include "my-recipes.html" %}
+                {% include "my_recipes.html" %}
             </div>
         </div>
         <div class="col s12 m4" id="my-favourites">
