--- a/templates/recipe_builder.html
+++ b/templates/recipe_builder.html
@@ -1,4 +1,4 @@
-{% extends "base-overlay.html" %}
+{% extends "base_overlay.html" %}
 {% block content %}
 <div class="container">
     <form method="POST" enctype="multipart/form-data" id="builder-form">
@@ -10,7 +10,7 @@
             <!-- preview -->
             <div class="row">
                 <div class="input-field col s12 center">
-                    <button class="btn waves-effect waves-light cyan" type="submit" id="preview-builder" name="preview"
+                    <button class="btn waves-effect waves-light cyan" type="submit" id="preview-recipe" name="preview"
                         formaction="/preview">Preview Recipe</button>
                 </div>
             </div>
