--- a/templates/register.html
+++ b/templates/register.html
@@ -1,4 +1,4 @@
-{% extends "base-overlay.html" %}
+{% extends "base_overlay.html" %}
 {% block content%}
 <div class="register-wrapper">
     <div class="row">
