--- a/templates/preview.html
+++ b/templates/preview.html
@@ -3,7 +3,7 @@
 
 <div class="row">
     <div class="col s12 m7 l5" id="recipe-preview">
-        {% include "recipecard.html" %}      
+        {% include "recipe_card.html" %}      
     </div>
 </div>
 
