--- a/templates/recipe_builder.html
+++ b/templates/recipe_builder.html
@@ -81,7 +81,7 @@
                 </div>
             </div>
             <!-------ingredients------->
-            <div class="row teal lighten-5 builder-extra-row">
+            <div class="row cyan lighten-5 builder-extra-row">
                 <div class="col s12">
                     <label>Ingredients</label>
                     <br>
