--- a/templates/recipe_editor.html
+++ b/templates/recipe_editor.html
@@ -1,7 +1,7 @@
 {% extends "base_overlay.html" %}
 {% block content %}
 <div class="container">
-    <form method="PUT" enctype="multipart/form-data" id="editor-form">
+    <form method="POST" enctype="multipart/form-data" id="editor-form">
         <div class="card-panel">
             <!-- header -->
             <div class="row form-header">
@@ -95,13 +95,13 @@
                 </div>
             </div>
             <!-------ingredients------->
-            <div class="row teal lighten-5 builder-extra-row">
+            <div class="row cyan lighten-5 builder-extra-row">
                 <div class="col s12">
                     <label>Ingredients</label>
                     <br>
                     <div class="container ingredients">
                         {% for ingredient in recipecard['ingredients'].items() %}
-                        <div class="row ingredient" id="ingredient-{{ loop.index }}">
+                        <div class="row ingredient cyan lighten-4" id="ingredient-{{ loop.index }}">
                             <div class="input-field col m8">
                                 <input type="text" id="ingredient-{{ loop.index }}-desc" name="ingredient-{{ loop.index }}-desc" minlength="1" maxlength="30" class="validate" value="{{ingredient[1].name}}" required />
                                 <label for="ingredient-{{ loop.index }}-desc">Ingredient</label>
@@ -132,15 +132,15 @@
                     <br>
                     <div class="container steps" id="editor-steps">
                         {% for step in recipecard['steps'].items() %}
-                        <div class="row step" id="step-{{ loop.index}}">
+                        <div class="row step cyan lighten-4" id="step-{{ loop.index}}">
                             <div class="input-field col m2">
                                 <select id="step-{{ loop.index}}-type" name="step-{{ loop.index}}-type">
                                     {% if step[1].type == "prepare" %}
-                                    <option value="1" selected>Prepare</option>
-                                    <option value="2">Cook</option>
+                                    <option value="prepare" selected>Prepare</option>
+                                    <option value="cook">Cook</option>
                                     {% else %}
-                                    <option value="1">Prepare</option>
-                                    <option value="2" selected>Cook</option>
+                                    <option value="prepare">Prepare</option>
+                                    <option value="cook" selected>Cook</option>
                                     {% endif %}
                                 </select>
                             </div>
