Added recipe favouriting functionality

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -204,7 +204,7 @@ main {
     margin-top: 20px;
 }
 
-#recipe-edit{
+.recipe-edit{
     margin-top: 5px;
     margin-bottom: 5px;
     float: left;
