--- a/templates/recipe_card.html
+++ b/templates/recipe_card.html
@@ -5,11 +5,12 @@
             <h5>{{ recipecard.title|title }}</h5>
             {% if (recipecard.created_by == session.user) and (recipecard.context is not defined) %}
                 <form action="/editrecipe/{{ recipecard }}" method="post">
-                    <button type="submit" name="edit" id="recipe-edit" class="btn waves-effect waves-light green"><i class="material-icons">edit</i></button>
+                    <button type="submit" name="edit" class="recipe-edit btn waves-effect waves-light green"><i class="material-icons">edit</i></button>
                 </form>
             {% elif (session.user is not none) and (recipecard.created_by != session.user) and (recipecard.context is not defined) %}
-                <form action="/addfavourite/{{ recipecard }}" method="post">
-                    <button type="submit" name="edit" id="add-favourite" class="btn waves-effect waves-light yellow"><i class="material-icons">star_border</i></button>
+                <form class="favourite-form" action="/favourite" method="post">
+                    <input type="text" value="{{ recipecard._id }}" name="recipecard" style="display: none;">
+                    <button type="submit" id="add-favourite" name="add-favourite" class="add-favourite btn waves-effect waves-light purple"><i class="material-icons">bookmark_border</i></button>
                 </form>
             {% endif %}
         </div>
