--- a/templates/recipe_card.html
+++ b/templates/recipe_card.html
@@ -12,6 +12,7 @@
                     <input type="text" value="{{ recipecard._id }}" name="recipecard" style="display: none;">
                     <button type="submit" id="add-favourite" name="add-favourite" class="add-favourite btn waves-effect waves-light purple"><i class="material-icons">bookmark_border</i></button>
                 </form>
+                {{ recipecard.isfavourite }}
             {% endif %}
         </div>
         <div class="col s2">
