--- a/templates/recipe_card.html
+++ b/templates/recipe_card.html
@@ -7,12 +7,12 @@
                 <form action="/editrecipe/{{ recipecard }}" method="post">
                     <button type="submit" name="edit" class="recipe-edit btn waves-effect waves-light green"><i class="material-icons">edit</i></button>
                 </form>
-            {% elif (session.user is not none) and (recipecard.created_by != session.user) and (recipecard.context is not defined) %}
-                <form class="favourite-form" action="/favourite" method="post">
-                    <input type="text" value="{{ recipecard._id }}" name="recipecard" style="display: none;">
-                    <button type="submit" id="add-favourite" name="add-favourite" class="add-favourite btn waves-effect waves-light purple"><i class="material-icons">bookmark_border</i></button>
+            {% elif recipecard.isfavourite is defined %}
+                <form class="favourite-form"> <!--</form> action="/favourite" method="post">-->
+                    <input type="text" id="_id" value="{{ recipecard._id }}" name="recipecard" style="display: none;">
+                    <input type="text" id="isfavourite" value="{{ recipecard.isfavourite }}" name="isfavourite" style="display: none;">
+                    <button type="submit" name="add-favourite" class="add-favourite btn waves-effect waves-light purple"><i class="material-icons">bookmark_border</i></button>
                 </form>
-                {{ recipecard.isfavourite }}
             {% endif %}
         </div>
         <div class="col s2">
