--- a/templates/search.html
+++ b/templates/search.html
@@ -10,11 +10,11 @@
     </section>
 
     <section>
-        <div class="contianer">
+        <div class="container">
             <div class="card-panel">
             {% for recipecard in results %}
                 <div class="row">
-                    <div class="col s12 m4 l3">
+                    <div class="col s12 m6">
                         {% include "recipe_card.html" %}
                     </div>
                 </div>
