--- a/templates/profile.html
+++ b/templates/profile.html
@@ -43,6 +43,7 @@
         <div class="col s12 m4" id="my-favourites">
             <div class="card-panel">
                 <h5>My Favourites</h5>
+                {% include "my_favourites.html" %}
             </div>
         </div>
     </div>
