--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,14 +6,11 @@
             <div class="card-panel">
                 <h5>Profile</h5>
                 <a href="#" id="user-edit" class="black-text"><i class="material-icons">edit</i></a>
-                <form method="POST">
+                <form method="POST" action="/edituser">
                     <label for="username">username</label>
                     <input disabled type="text" name="username" value="{{ user.username }}" class="validate" required/>
 
-                    <label for="password" style="display: none;">password</label>
-                    <input disabled type="password" name="password" id="password" style="display: none;" class="validate" required/>
-                    <label for="password_confirm" style="display: none;">password_confirm</label>
-                    <input disabled type="password" name="password_confirm" id="password_confirm" style="display: none;" class="validate" required/>
+                    <input type="password" name="password" id="password" value="{{ user.password }}" style="display: none;" class="validate" required/>
 
                     <label for="email">email</label>
                     <input disabled type="email" name="email" value="{{ user.email }}" class="validate" required/>
@@ -29,6 +26,9 @@
 
                     <label for="country">country</label>
                     <input disabled type="text" name="country" value="{{ user.country }}" class="validate" required/>
+
+                    <input disabled type="text" name="favourites" value="{{ user.favourites }}" style="display: none;"/>
+                    <input disabled type="text" name="_id" value="{{ user._id }}" style="display: none;"/>
 
                     <input type="submit" class="btn" id="user-edit-submit" style="display: none;">
                 </form>
