--- a/templates/recipe_builder.html
+++ b/templates/recipe_builder.html
@@ -11,7 +11,7 @@
             <div class="row">
                 <div class="input-field col s12 center">
                     <button class="btn waves-effect waves-light cyan" type="submit" id="preview-recipe" name="preview"
-                        formaction="/preview">Preview Recipe</button>
+                        formaction="/previewrecipe">Preview Recipe</button>
                 </div>
             </div>
             <!-------title------->
