--- a/templates/recipe_editor.html
+++ b/templates/recipe_editor.html
@@ -11,7 +11,7 @@
             <div class="row">
                 <div class="input-field col s12 center">
                     <button class="btn waves-effect waves-light cyan" type="submit" id="preview-recipe" name="preview"
-                        formaction="/preview">Preview Recipe</button>
+                        formaction="/previewrecipe">Preview Recipe</button>
                 </div>
                 <div class="input-field col s12 center">
                     <button class="btn waves-effect waves-light red" type="submit" id="delete-recipe" name="delete"
@@ -19,7 +19,7 @@
                 </div>
                 <div class="input-field col s12 center">
                     <button class="btn waves-effect waves-light green" type="submit" id="cancel-changes" name="cancel"
-                        formaction="/canceledit">Cancel Changes</button>
+                        formaction="/canceleditrecipe">Cancel Changes</button>
                 </div>
             </div>
             <!-------recipe id placeholer------->
@@ -98,27 +98,28 @@
             <div class="row cyan lighten-5 builder-extra-row">
                 <div class="col s12">
                     <label>Ingredients</label>
-                    <br>
                     <div class="container ingredients">
-                        {% for ingredient in recipecard['ingredients'].items() %}
-                        <div class="row ingredient cyan lighten-4" id="ingredient-{{ loop.index }}">
-                            <div class="input-field col m8">
-                                <input type="text" id="ingredient-{{ loop.index }}-desc" name="ingredient-{{ loop.index }}-desc" minlength="1" maxlength="30" class="validate" value="{{ingredient[1].name}}" required />
-                                <label for="ingredient-{{ loop.index }}-desc">Ingredient</label>
-                            </div>
-                            <div class="input-field col m2">
-                                <input type="text" id="ingredient-{{ loop.index }}-measure" name="ingredient-{{ loop.index }}-measure"  minlength="1" maxlength="4" class="validate" pattern="^[0-9]{1,4}$" value="{{ingredient[1].qty.measure}}" required />
-                                <label for="ingredient-{{ loop.index }}-measure">Measure</label>
-                            </div>
-                            <div class="input-field col m1">
-                                <input type="text" id="ingredient-${i}-unit" name="ingredient-{{ loop.index }}-unit"  minlength="1" maxlength="8" class="validate" pattern="^[a-z]{1,8}$" value="{{ingredient[1].qty.unit}}" required />
-                                <label for="ingredient-{{ loop.index }}-unit">Unit</label>
-                            </div>
-                            <div class="input-field col m1">
-                                <a href="#" class="remove-ingredient" id="remove-ingredient-{{ loop.index }}"><i class="material-icons black-text">delete</i></a> 
-                            </div>
-                        </div>    
-                        {% endfor %}
+                        {% if (recipecard['ingredients'] is defined) and (recipecard['ingredients'] is not none) %}
+                            {% for ingredient in recipecard['ingredients'].items() %}
+                                <div class="row ingredient cyan lighten-4" id="ingredient-{{ loop.index }}">
+                                    <div class="input-field col m8">
+                                        <input type="text" id="ingredient-{{ loop.index }}-desc" name="ingredient-{{ loop.index }}-desc" minlength="1" maxlength="30" class="validate" value="{{ingredient[1].name}}" required />
+                                        <label for="ingredient-{{ loop.index }}-desc">Ingredient</label>
+                                    </div>
+                                    <div class="input-field col m2">
+                                        <input type="text" id="ingredient-{{ loop.index }}-measure" name="ingredient-{{ loop.index }}-measure"  minlength="1" maxlength="4" class="validate" pattern="^[0-9]{1,4}$" value="{{ingredient[1].qty.measure}}" required />
+                                        <label for="ingredient-{{ loop.index }}-measure">Measure</label>
+                                    </div>
+                                    <div class="input-field col m1">
+                                        <input type="text" id="ingredient-${i}-unit" name="ingredient-{{ loop.index }}-unit"  minlength="1" maxlength="8" class="validate" pattern="^[a-z]{1,8}$" value="{{ingredient[1].qty.unit}}" required />
+                                        <label for="ingredient-{{ loop.index }}-unit">Unit</label>
+                                    </div>
+                                    <div class="input-field col m1">
+                                        <a href="#" class="remove-ingredient" id="remove-ingredient-{{ loop.index }}"><i class="material-icons black-text">delete</i></a> 
+                                    </div>
+                                </div>  
+                            {% endfor %}
+                        {% endif %}
                     </div>
                     <br>
                     <a class="btn waves-effect waves-light" id="builder-add-ingredient">+ Ingredient</a>
@@ -129,36 +130,38 @@
             <div class="row cyan lighten-5 builder-extra-row">
                 <div class="col s12">
                     <label>Method</label>
-                    <br>
                     <div class="container steps" id="editor-steps">
-                        {% for step in recipecard['steps'].items() %}
-                        <div class="row step cyan lighten-4" id="step-{{ loop.index}}">
-                            <div class="input-field col m2">
-                                <select id="step-{{ loop.index}}-type" name="step-{{ loop.index}}-type">
-                                    {% if step[1].type == "prepare" %}
-                                    <option value="prepare" selected>Prepare</option>
-                                    <option value="cook">Cook</option>
-                                    {% else %}
-                                    <option value="prepare">Prepare</option>
-                                    <option value="cook" selected>Cook</option>
-                                    {% endif %}
-                                </select>
-                            </div>
-                            <div class="input-field col m7">
-                                <input type="text" id="step-{{ loop.index}}-desc" name="step-{{ loop.index}}-desc" minlength="1"
-                                    maxlength="100" class="validate" value="{{step[1].action}}" required />
-                                <label for="step-{{ loop.index}}-desc">Describe This Step</label>
-                            </div>
-                            <div class="input-field col m2">
-                                <input type="text" id="step-{{ loop.index}}-time" name="step-{{ loop.index}}-time" minlength="1" maxlength="3"
-                                    class="validate" pattern="^[0-9.]{1,3}$" value="{{step[1].time}}" required />
-                                <label for="step-{{ loop.index}}-time">Time (mins)</label>
-                            </div>
-                            <div class="input-field col m1">
-                                <a href="#" class="remove-step" id="remove-step-{{ loop.index}}"><i class="material-icons black-text">delete</i></a>
-                            </div>
-                        </div>
-                        {% endfor %}
+                        {% if (recipecard['steps'] is defined) and (recipecard['steps'] is not none) %}
+                            {% for step in recipecard['steps'].items() %}
+                                <div class="row step cyan lighten-4" id="step-{{ loop.index}}">
+                                    <div class="input-field col m2">
+                                        <select id="step-{{ loop.index}}-type" name="step-{{ loop.index}}-type">
+                                            {% if step[1].type == "prepare" %}
+                                            <option value="prepare" selected>Prepare</option>
+                                            <option value="cook">Cook</option>
+                                            {% else %}
+                                            <option value="prepare">Prepare</option>
+                                            <option value="cook" selected>Cook</option>
+                                            {% endif %}
+                                        </select>
+                                        <label for="step-{{ loop.index}}-type">Action Type</label>
+                                    </div>
+                                    <div class="input-field col m7">
+                                        <input type="text" id="step-{{ loop.index}}-desc" name="step-{{ loop.index}}-desc" minlength="1"
+                                            maxlength="100" class="validate" value="{{step[1].action}}" required />
+                                        <label for="step-{{ loop.index}}-desc">Action</label>
+                                    </div>
+                                    <div class="input-field col m2">
+                                        <input type="text" id="step-{{ loop.index}}-time" name="step-{{ loop.index}}-time" minlength="1" maxlength="3"
+                                            class="validate" pattern="^[0-9.]{1,3}$" value="{{step[1].time}}" required />
+                                        <label for="step-{{ loop.index}}-time">Time (mins)</label>
+                                    </div>
+                                    <div class="input-field col m1">
+                                        <a href="#" class="remove-step" id="remove-step-{{ loop.index}}"><i class="material-icons black-text">delete</i></a>
+                                    </div>
+                                </div>
+                            {% endfor %}
+                        {% endif %} 
                     </div>
                     <br>
                     <a class="btn waves-effect waves-light" id="builder-add-step">+ Step</a>
