--- a/templates/home.html
+++ b/templates/home.html
@@ -46,26 +46,27 @@
                     <a class="btn-floating red modal-trigger" id="show-recipe-card" href="#sample-recipe-content"><i class="material-icons">add</i></a>
                     <span class="lime-text text-lighten-5" style="line-height: 2.5;" id="sample-tag">View a sample
                         recipe card</span>
+                    
                     <div class="modal" id="sample-recipe-content">
                         {% include "recipe_card.html" %}
                     </div>
                     
                 </div>
                 <!-- SITE EXPLAINER TAGS -->
-                <div class="col s12 m4 push-m1 l3 push-l2" id="home-info-col">
+                <div class="col s12 m4 push-m1 l3 push-l2 white-text" id="home-info-col">
                     <div class="row">
                         <!-- TAG ONE -->
-                        <div class="col s12 home-info-text-col teal-text text-lighten-5">
+                        <div class="col s12 home-info-text-col">
                             <p class="home-info-text" id="home-info-text-1">Great recipe ideas for weaning your little
                                 munchkins!</p>
                         </div>
                         <!-- TAG TWO -->
-                        <div class="col s12 home-info-text-col purple-text text-lighten-5">
+                        <div class="col s12 home-info-text-col">
                             <p class="home-info-text" id="home-info-text-2">Save your favourite recipes to your profile!
                             </p>
                         </div>
                         <!-- TAG THREE -->
-                        <div class="col s12 home-info-text-col blue-text text-lighten-4">
+                        <div class="col s12 home-info-text-col">
                             <p class="home-info-text" id="home-info-text-3">Add your own best recipes with our easy to
                                 use recipe builder!</p>
                         </div>
