--- a/templates/recipe_card.html
+++ b/templates/recipe_card.html
@@ -38,6 +38,7 @@
         </div>
     </div>
     <div class="recipe-img-wrapper">
+        {{recipecard.recipe_img}}
         {% if recipecard.recipe_img %}
             <img class="recipe-img" src="../static/images/public/{{ recipecard.recipe_img }}">
         {% endif %}
