--- a/templates/recipe_editor.html
+++ b/templates/recipe_editor.html
@@ -15,7 +15,7 @@
                 </div>
                 <div class="input-field col s12 center">
                     <button class="btn waves-effect waves-light red" type="submit" id="delete-recipe" name="delete"
-                        formaction="/deleterecipe">Delete Recipe</button>
+                        formaction="/deleterecipe" onsubmit="return confirm('Are you sure you want to submit?');">Delete Recipe</button>
                 </div>
                 <div class="input-field col s12 center">
                     <button class="btn waves-effect waves-light green" type="submit" id="cancel-changes" name="cancel"
@@ -47,8 +47,9 @@
                         <div class="col s12">
                             <div class="btn pink darken-4">
                                 <span>Select Image</span>
-                                <input type="file" accept="image/*" onchange="loadPreviewFile(event)" name="recipe_img"
-                                    value="{{ recipecard['recipe_img'] }}">
+                                <p>{{ recipecard['recipe_img'] }}</p>
+                                <input type="file" accept="image/*" name="recipe_img" id="builder-recipe-img"
+                                    value="{{ recipecard['recipe_img'] }}" onchange="loadPreviewFile(event)"/>
                             </div>
                         </div>
                         <div class="col s12">
@@ -58,7 +59,7 @@
                         </div>
                         <div class="col s12">
                             <div class="file-path-wrapper">
-                                <input class="file-path validate" type="text" value="{{ recipecard['recipe_img'] }}">
+                                <input class="file-path validate" id="file-path" type="text" value="{{ recipecard['recipe_img'] }}" name="recipe_img_name">
                             </div>
                         </div>
                     </div>
@@ -183,9 +184,36 @@
 </div>
 
 <script>
-    var loadPreviewFile = function (event) {
+    var MutationObserver = window.MutationObserver;
+    var slide = document.getElementById('file-path');
+
+    var slideObserver = new MutationObserver(function(mutations) {
+        mutations.forEach(function(mutation) {
+            if (mutation.type == "attributes") {
+                var value =  document.getElementById("file-path").getAttribute("value");
+                document.getElementById("builder-preview-img").setAttribute("src", "../static/images/public/" + value);
+            }
+        });
+    });
+
+    slideObserver.observe(slide, {
+        attributes: true, 
+        attributeFilter: ['value']
+    });
+
+
+    document
+        .getElementById("file-path")
+        .setAttribute("value", document
+            .getElementById("file-path")
+            .getAttribute("value").replace("$","")
+    );
+
+
+    var loadPreviewFile = function(event){ 
         $('#builder-preview-img').attr("src", URL.createObjectURL(event.target.files[0]));
     };
+
 </script>
 
 {% endblock %}
