--- a/templates/flashes.html
+++ b/templates/flashes.html
@@ -1,6 +1,5 @@
 {% block flashes %}
-     <section>
-        <!-- flash messages -->
+     <section class="flash-messages">
         {% with messages = get_flashed_messages() %}
         {% if messages %}
         {% for message in messages %}
