--- a/templates/profile.html
+++ b/templates/profile.html
@@ -30,7 +30,9 @@
                     <input disabled type="text" name="favourites" value="{{ user.favourites }}" style="display: none;"/>
                     <input disabled type="text" name="_id" value="{{ user._id }}" style="display: none;"/>
 
-                    <input type="submit" class="btn" id="user-edit-submit" style="display: none;">
+                    <input type="submit" value="Submit" class="btn profile-submit-btn" id="user-edit-submit" style="display: none;" onclick="return confirm('Submit changes?');">
+                    <input type="submit" value="Cancel" class="btn profile-submit-btn orange" id="user-edit-cancel" style="display: none;" formaction="/profile/{{session.user}}" onclick="return confirm('Cancel changes?');">
+                    <input type="submit" value="Delete" class="btn profile-submit-btn red" id="user-edit-delete" style="display: none;" formaction="/deleteuser" onclick="return confirm('Are you sure you want to delete your account?');">
                 </form>
             </div>
         </div>
