--- a/templates/recipe_editor.html
+++ b/templates/recipe_editor.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="input-field col s12 center">
                     <button class="btn waves-effect waves-light green" type="submit" id="cancel-changes" name="cancel"
-                        formaction="/canceleditrecipe">Cancel Changes</button>
+                        formaction="/canceleditrecipe" onclick="return confirm('Are you sure you want to cancel changes?');">Cancel Changes</button>
                 </div>
             </div>
             <!-------recipe id placeholer------->
